--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -62,6 +62,7 @@
     height: 172px;
     color: #fff;
     text-align: center;
+    margin: auto;
   }
 
   &-thumbnail {
@@ -85,7 +86,7 @@
     color: #fff;
     font-weight: 700;
     font-size: 22px;
-    margin-bottom: 20px;
+    margin-bottom: 22px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -98,5 +99,9 @@
   &-platform {
     width: 20px;
     margin-right: 10px;
+  }
+  &-metacritic {
+    color: #fff;
+    margin-bottom: 22px;
   }
 }
